--- a/spider/pom.xml
+++ b/spider/pom.xml
@@ -22,7 +22,7 @@
             <version>2.9.8</version>
         </dependency>
 
-        <!--pio，读写Excel文件-->
+        <!--poi，读写Excel文件-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -33,6 +33,14 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
+
+        <!-- javacsv 读取csv大数据文件 -->
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+
 
 
     </dependencies>
