--- a/spider/pom.xml
+++ b/spider/pom.xml
@@ -41,6 +41,17 @@
             <version>2.0</version>
         </dependency>
 
+        <!--java 访问hbase-->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
 
     </dependencies>
